<?xml version="1.0"?>
<package format="2">
 <name>medusa_scripts</name>
 <version>1.0.0</version>
 <description>Medusa Scripts metapackage</description>

 <license>MIT</license>

 <author email="joaogquintas@tecnico.ulisboa.pt">Joao Quintas</author>

 <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
 <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
 <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
 <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
 <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <depend>std_msgs</depend> 
 <depend>rospy</depend>
 <depend>medusa_msgs</depend>

</package>
