<?xml version="1.0"?>
<package>
  <name>safety_feature</name>
  <version>1.0.0</version>
  <description>
	The safety_feature package
	  
	Institute for Systems and Robotics
	Instituto Superior Tecnico
	Lisbon, Portugal
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jorgeeribeiro@gmail.com">Jorge Ribeiro</maintainer>
  <maintainer email="miguel.silva.ribeiro@tecnico.ulisboa.pt">Miguel Ribeiro</maintainer>
  <maintainer email="henrique.ribeiro@tecnico.ulisboa.pt">Henrique Silva</maintainer>

  <license>MIT</license>

  <url type="website">http://dsor.isr.tecnico.ulisboa.pt</url>
  <url type="repository">https://github.com/dsor-isr/medusa_drivers</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>medusa_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>medusa_msgs</run_depend>

</package>
