<?xml version="1.0"?>
<package>
  <name>comms_msgs</name>
  <description>A place for shared messages and services to break dependencies</description>
  
  <version>1.0.0</version>

  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <author email="david.souto@tecnico.ulisboa.pt">David Souto</author>
  <author email="andre.potes@tecnico.ulisboa.pt">Andre Potes</author>
  <author email="jquintas@gmail.com">Joao Quintas</author>
  <author email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</author>
  
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
