<?xml version="1.0"?>
<package>
  <name>medusa_comms</name>
  <version>1.0.0</version>
  <description>
  The medusa_comms metapackage contains some general tools
  
  Institute for Systems and Robotics
  Instituto Superior Tecnico
  Lisbon, Portugal
  </description>

  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <author email="jquintas@gmail.com">Joao Quintas</author>
  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <author email="david.souto@tecnico.ulisboa.pt">David Souto</author>
  <author email="andre.potes@tecnico.ulisboa.pt">Andre Potes</author>
  <author email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</author>

  <license>MIT</license>

  <url type="website">http://dsor.isr.tecnico.ulisboa.pt</url>
  <url type="repository">https://github.com/dsor-isr/medusa_base</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>comms_msgs</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
