<?xml version="1.0"?>
<package format="2">
  <name>static_thruster_allocation</name>
  <version>1.0.0</version>
  <description>A static thruster allocation package</description>
  
  <author email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</author>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>auv_msgs</depend>
  <depend>dsor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>medusa_gimmicks_library</depend>

</package>
